Fixed double scrollbar when content width > vw width

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -1,7 +1,7 @@
 @import 'core'
 
 html
-    // overflow: hidden
+    overflow-y: hidden
 
     body
         // overflow: auto
